# django_chat_app

./: db.sqlite3
base/: forms.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_message_topic_delete_user_room_host_alter_room_id_and_more.py  0002_user_avatar_user_bio_user_fullname_alter_user_email_and_more.py  0003_alter_room_options_and_more.py  0003_alter_user_bio.py
base/templates/base/: activity_page.html  create_room.html  delete.html  error-messages.html  home.html  login_user.html  participants.html  register_user.html  room.html  room_form.html  topics.html  topics_page.html  topics_sidebar.html  update_user.html
django_chat_app/: db.sqlite3  pyproject.toml  settings.py  urls.py
django_chat_app/base/: forms.py  views.py
django_chat_app/base/templates/base/: activity_feeds.html  delete.html  login_user.html  register_user.html  room.html  rooms.html  user_profile.html
django_chat_app/django_chat_app/: urls.py
django_chat_app/static/css/: style.css
django_chat_app/templates/: main.html
static/css/: styles.css
static/js/: script.js
templates/: main.html  navbar.html
