[tool.poetry]
name = "django-chat-app-poetry"
version = "0.1.0"
description = ""
authors = ["Oussamabennabi <oussamabennabi0184@gmail.com>"]
readme = "README.md"
packages = [{include = "django_chat_app_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
